--- a/force-app/main/default/classes/domain/DividerBlock.cls
+++ b/force-app/main/default/classes/domain/DividerBlock.cls
@@ -1,9 +1,21 @@
 public class DividerBlock extends SlackBlock {
-    public DividerBlock() {
+    private DividerBlock() {
         super('divider', null);
     }
 
     public String toJSON() {
         return JSON.serialize(this, null);
+    }
+
+    public static DividerBlockBuilder builder() {
+        return new DividerBlockBuilder();
+    }
+
+    public class DividerBlockBuilder {
+        private DividerBlockBuilder() {}
+
+        public DividerBlock build() {
+            return new DividerBlock();
+        }
     }
 }
