disconnected SerializeableSlackMessageComponent and IllegalArgumentException --> SchemaException

--- a/force-app/main/default/classes/domain/SlackBlock.cls
+++ b/force-app/main/default/classes/domain/SlackBlock.cls
@@ -1,4 +1,4 @@
-public abstract class SlackBlock implements SerializableSlackMessageComponent {
+public abstract class SlackBlock {
     protected String type;
     protected String blockId;
 
