--- a/force-app/main/default/classes/request/SlackPostRequestDirector.cls
+++ b/force-app/main/default/classes/request/SlackPostRequestDirector.cls
@@ -14,21 +14,23 @@ public class SlackPostRequestDirector {
             .text('Hello, I am backup text')
             .blocks(new List<SlackBlock> {
                 SectionBlock.builder()
-                    .text('Test')
-                    .field('Field1')
-                    .field('Field2')
-                    .field('Field3')
-                    .field('Field4')
-                    .field('Field5')
-                    .field('Field6')
-                    .field('Field7')
-                    .field('Field8')
+                    .text(new SlackText('mrkdwn', '~Test~', null, true))
+                    .field(new SlackText('plain_text', 'Field1', null, null))
+                    .field(new SlackText('plain_text', 'Field1', null, null))
+                    .field(new SlackText('plain_text', 'Field1', null, null))
+                    .field(new SlackText('mrkdwn', '*Field1*:\n_test_', null, null))
+                    .field(new SlackText('plain_text', 'Field1', null, null))
+                    .field(new SlackText('plain_text', 'Field1', null, null))
+                    .field(new SlackText('plain_text', 'Field1', null, null))
+                    .field(new SlackText('plain_text', 'Field1', null, null))
                     .accessory(button)
                     .build(),
                 DividerBlock.builder()
                     .build(),
-                SectionBlock.builder()
-                    .text('Test2')
+                ImageBlock.builder()
+                    .title(new SlackText('plain_text', 'Image Title', true, null))
+                    .altText('Test Image')
+                    .imageUrl('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnm163IvLzBVh86TlKZil3q4O3rMxUBQvodw&usqp=CAU')
                     .build()
             })
             .build();
